--- a/packages/minddrop/src/MindDrop/MindDrop.css
+++ b/packages/minddrop/src/MindDrop/MindDrop.css
@@ -1,5 +1,5 @@
 .minddrop {
-  height: 100%;
+  height: 100vh;
   display: flex;
 }
 
